refactor: consolidate all entity mappings with MapStruct